syntax = "proto3";
package authpb;

import "gogoproto/gogo.proto";

option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.goproto_getters_all) = false;
option (gogoproto.goproto_enum_prefix_all) = false;

// User is a single entry in the bucket authUsers
message User {
  bytes name = 1;
  bytes password = 2;
  repeated string roles = 3;
  // each path is unique in acl
  repeated AclEntry acl = 4;
  int64 aclRevision = 5;
}

// Permission is a single entity
message Permission {
  enum Type {
    READ = 0;
    WRITE = 1;
    READWRITE = 2;
  }
  Type permType = 1;

  bytes key = 2;
  bytes range_end = 3;
}

// Role is a single entry in the bucket authRoles
message Role {
  bytes name = 1;

  repeated Permission keyPermission = 2;
}

message PrototypeField {
  string key = 1;
  uint32 rightsRead = 2;
  uint32 rightsWrite = 3;
}

// Prototype is a single entry in the bucket authPrototypes
message Prototype {
  enum Flags {
    NONE = 0x00;
    FORCE_SUBOBJECTS_FIND = 0x01;
  }

  bytes name = 1;

  // each key is unique in fields
  repeated PrototypeField fields = 2;

  uint32 flags = 3;
}

message AclEntry {
  string path = 1;
  uint32 rightsSet = 2;
  uint32 rightsUnset = 3;
}
